--- a/.github/workflows/main_azapp-juandiego.yml
+++ b/.github/workflows/main_azapp-juandiego.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -55,6 +55,6 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'azapp-juandiego'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_b1a25cf1e55f442eac3006218240bcf3 }}
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F43F3F976D4A4410AC8EA575F55FA925 }}
           package: .
